; ModuleID = '/home/carl/AnghaBench/scrcpy/app/tests/extr_test_control_msg_serialize.c_test_serialize_collapse_notification_panel.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/tests/extr_test_control_msg_serialize.c_test_serialize_collapse_notification_panel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.control_msg = type { i8 }

@CONTROL_MSG_TYPE_COLLAPSE_NOTIFICATION_PANEL = common dso_local global i8 0, align 1
@CONTROL_MSG_SERIALIZED_MAX_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_serialize_collapse_notification_panel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_serialize_collapse_notification_panel() #0 {
  %1 = alloca %struct.control_msg, align 1
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca [1 x i8], align 1
  %6 = getelementptr inbounds %struct.control_msg, %struct.control_msg* %1, i32 0, i32 0
  %7 = load i8, i8* @CONTROL_MSG_TYPE_COLLAPSE_NOTIFICATION_PANEL, align 1
  store i8 %7, i8* %6, align 1
  %8 = load i32, i32* @CONTROL_MSG_SERIALIZED_MAX_SIZE, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %2, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %3, align 8
  %12 = call i32 @control_msg_serialize(%struct.control_msg* %1, i8* %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, 1
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = getelementptr inbounds [1 x i8], [1 x i8]* %5, i64 0, i64 0
  %18 = load i8, i8* @CONTROL_MSG_TYPE_COLLAPSE_NOTIFICATION_PANEL, align 1
  store i8 %18, i8* %17, align 1
  %19 = getelementptr inbounds [1 x i8], [1 x i8]* %5, i64 0, i64 0
  %20 = call i32 @memcmp(i8* %11, i8* %19, i32 1)
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %25)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @control_msg_serialize(%struct.control_msg*, i8*) #2

declare dso_local i32 @assert(i32) #2

declare dso_local i32 @memcmp(i8*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
